--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
 		"jsx": "react",
 		"paths": {
 			"@components/*": ["./components/*"],
-			"@images/*": ["./assets/images/*"]
+			"@images/*": ["./assets/images/*"],
+			"@pages/*": ["./pages/*"]
 		}
 	},
 	"exclude": ["node_modules", "**/node_modules/*"]
