--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
     image: app-dev
     build:
       context: .
+      dockerfile: Dockerfile.dev
       target: development
     volumes:
       - ./src:/app/src
