--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -17,7 +17,7 @@ jobs:
         steps:
         
         - name: Login
-          uses: GoogleCloudPlatform/github-actions/setup-gcloud@develop
+          uses: Noraluk/react-101@develop
           with:
             GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
             service_account_email: ${{ secrets.GCP_EMAIL }}
