:green_heart: ci

--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -2,7 +2,7 @@ name: cloudrun-deploy
 on:
   push:
     branches:
-      - main
+      - develop
 jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@master
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - uses: Noraluk/react-101@develop
       with:
         service_account_email: ${{ secrets.GCP_EMAIL }}
         service_account_key: ${{ secrets.GCP_CREDENTIALS }}
