--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/checkout@develop
 
       - name: Setup GCP Service Account
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@develop
+        uses: Noraluk/react-101@develop
         with:
           version: 'latest'
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
