--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -70,40 +70,21 @@ name: publish
 
 on: [push]
 
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+
 jobs:
-  build:
-    name: Cloud Run Deployment
+  deploy:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Setup Cloud SDK
+      uses: Noraluk/react-101@v0.2.0
+      with:
+        project_id: ${{ env.PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Setup GCP Service Account
-        uses: Noraluk/react-101@develop
-        with:
-          version: 'latest'
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker
-      
-      - name: Build
-        run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/helloworld:latest .
-
-      - name: Push
-        run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/helloworld:latest
-
-      - name: Deploy
-        run: |
-          gcloud run deploy helloworld \
-          --region europe-west1 \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/helloworld \
-          --platform managed \
-          --allow-unauthenticated \
-          --project ${{ secrets.GCP_PROJECT_ID }}
+    - name: Authorize Docker push
+      run: gcloud auth configure-docker
