--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -89,19 +89,123 @@
 #     - name: Authorize Docker push
 #       run: gcloud auth configure-docker
 
-name: test
+name: deploy-cloudrun Credentials Integration
 
-on: [push]
+on:
+  push:
+    branches:
+    - 'main'
+  pull_request:
 
 jobs:
-  json-test:
+  gcloud:
+    name: with setup-gcloud
+    if: ${{ github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name && github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+    - id: service
+      run: echo ::set-output name=service::run-gcloud-$GITHUB_SHA
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@master
+      with:
+        node-version: 12.x
+    - run: |-
+        npm ci
+        npm run build
+    - name: Set up authentication
+      uses: google-github-actions/setup-gcloud@master
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
+        export_default_credentials: true
 
-      - uses: ./
-        env:
-          PROJECT_ID: ${{secrets.GCP_PROJECT_ID}}
-          APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
-        with:
-          args: app deploy app.yaml
+    - id: deploy
+      uses: ./
+      with:
+        image: gcr.io/cloudrun/hello
+        service: ${{ steps.service.outputs.service }}
+
+    - name: Integration Tests
+      run: npm run e2e-tests
+      env:
+        URL: ${{ steps.deploy.outputs.url }}
+
+  b64_json:
+    name: with base64 creds
+    if: ${{ github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name && github.actor != 'dependabot[bot]' }}
+    runs-on: ubuntu-latest
+    steps:
+    - id: service
+      run: echo ::set-output name=service::run-b64-$GITHUB_SHA
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@master
+      with:
+        node-version: 12.x
+    - run: |-
+        npm ci
+        npm run build
+    - id: deploy
+      uses: ./
+      with:
+        credentials: ${{ secrets.GCP_SA_KEY_B64 }}
+        image: gcr.io/cloudrun/hello
+        service: ${{ steps.service.outputs.service }}
+
+    - uses: google-github-actions/setup-gcloud@master # Set up ADC to make authenticated request to service
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
+        export_default_credentials: true
+
+    - name: Integration Tests
+      run: npm run e2e-tests
+      env:
+        URL: ${{ steps.deploy.outputs.url }}
+
+  json:
+    name: with json creds
+    if: ${{ github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name && github.actor != 'dependabot[bot]' }}
+    runs-on: ubuntu-latest
+    steps:
+    - id: service
+      run: echo ::set-output name=service::run-json-$GITHUB_SHA
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@master
+      with:
+        node-version: 12.x
+    - run: |-
+        npm ci
+        npm run build
+    - id: deploy
+      uses: ./
+      with:
+        credentials: ${{ secrets.DEPLOY_CLOUDRUN_SA_KEY_JSON }}
+        image: gcr.io/cloudrun/hello
+        service: ${{ steps.service.outputs.service }}
+
+    - uses: google-github-actions/setup-gcloud@master # Set up ADC to make authenticated request to service
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
+        export_default_credentials: true
+
+    - name: Integration Tests
+      run: npm run e2e-tests
+      env:
+        URL: ${{ steps.deploy.outputs.url }}
+
+  cleanup:
+    name: Clean Up
+    if: ${{ (github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name && github.actor != 'dependabot[bot]') && always() }}
+    runs-on: ubuntu-latest
+    needs: [json, gcloud, b64_json]
+    steps:
+    - uses: google-github-actions/setup-gcloud@master
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Delete services
+      run: |-
+        gcloud config set run/platform managed
+        gcloud config set run/region us-central1
+        gcloud run services delete run-json-$GITHUB_SHA --quiet
+        gcloud run services delete run-b64-$GITHUB_SHA --quiet
+        gcloud run services delete run-gcloud-$GITHUB_SHA --quiet
