--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -25,9 +25,12 @@ jobs:
       
     - name: Configure Docker to use Google Cloud Platform
       run: gcloud auth configure-docker
+    
+    - name: set project id in gcloud
+      run: gcloud config set project react-101-325014
 
     - name: Push image to Google Cloud Container Registry
-      run: gcloud builds submit --tag gcr.io/react-101-324615/react
+      run: gcloud builds submit --tag gcr.io/react-101-325014/react
 
     - name: Deploy to Cloud Run
       run: gcloud beta run deploy react-101--quiet --image gcr.io/react-101-325014/react:latest --project react-101-325014 --region asia-southeast1 --platform managed
