--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -21,16 +21,16 @@ jobs:
       run: echo ${{ github.sha }}
       
     - name: Build the Docker image
-      run: docker build -t gcr.io/react-101-325014/react .
+      run: docker build -t gcr.io/react-101-325107/react .
       
     - name: Authenticate into Google Cloud Platform
-      run: gcloud auth activate-service-account kanoon@react-101-325014.iam.gserviceaccount.com --key-file=key.json
+      run: gcloud auth activate-service-account kanoon@react-101-325107.iam.gserviceaccount.com --key-file=key.json
       
     - name: Configure Docker to use Google Cloud Platform
       run: gcloud auth configure-docker
 
     - name: Push image to Google Cloud Container Registry
-      run: docker push gcr.io/react-101-325014/react:latest
+      run: docker push gcr.io/react-101-325107/react:latest
 
     - name: Deploy to Cloud Run
-      run: gcloud run deploy react-101--quiet --image gcr.io/react-101-325014/react:latest --project react-101-325014 --region asia-southeast1 --platform managed
+      run: gcloud run deploy react-101 --image gcr.io/react-101-325107/react:latest --project react-101-325107 --region asia-southeast1 --platform managed
